change font in reset button

--- a/templates/reset.html
+++ b/templates/reset.html
@@ -17,7 +17,6 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Notable', sans-serif;
         }
 
         html, body {
@@ -73,6 +72,7 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            font-family: 'Notable'
         }
 
         .reset-button:hover {
@@ -92,6 +92,7 @@
         .back-link a:hover {
             text-decoration: underline;
         }
+
     </style>
 
     <div class="reset-container">
