made seasonal mood work with dark mode

--- a/templates/seasonalMood.html
+++ b/templates/seasonalMood.html
@@ -105,6 +105,12 @@
             /*margin-right: 30px;*/
         }
 
+        body.dark-mode {
+            .small-record-mood, .small-record-artist {
+                color: white;
+            }
+        }
+
         .small-record-artist {
             font-family: 'Radio Canada', sans-serif;
             color: #000000;
