make all api requests at the start, save data to session

--- a/templates/slide_2.html
+++ b/templates/slide_2.html
@@ -205,6 +205,8 @@
                         }
                     }
                 });
+
+                // on button click change the axes colors
             })
             </script>
 
