--- a/templates/LLMinsights.html
+++ b/templates/LLMinsights.html
@@ -29,6 +29,7 @@
             background-size: cover;
             background-position: center top;
             padding-top: 100px;
+            overflow: hidden;
         }
 
         /* Fixed Header */
@@ -108,6 +109,11 @@
             height: 400px;
         }
 
+        .cartoon-image {
+            width: 350px;
+            height: 350px;
+        }
+
         .artist-vinyl {
             width: 160px;
             height: 390px;
@@ -123,6 +129,7 @@
         /* Songs section styling */
         .top-songs-section {
             display: flex;
+            flex-direction: column;
             gap: 15px;
             max-width: 600px;
         }
@@ -131,11 +138,7 @@
             display: flex;
             flex-direction: column;
             gap: 15px;
-        }
-
-        .songs-column:nth-child(2) {
-            margin-top: 130px; /* Offset for the right column */
-            margin-left: 80px; /* Offset for the right column */
+            font-size: 20px;
         }
 
         .song {
@@ -184,8 +187,26 @@
             margin: 0;
         }
 
+        .top-left {
+           position: absolute;
+           top: -50px;
+           left: -150px;
+           width: 300px;
+           height: auto;
+       }
 
+       .bottom-right {
+           position: absolute;
+           bottom: -150px;
+           right: -150px;
+           width: 300px;
+           height: auto;
+           transform: rotate(180deg);
+       }
     </style>
+
+    <img src="{% static 'slide_2/top_left_corner_rainbow.png' %}" alt="Rainbow" class="top-left rainbow">
+    <img src="{% static 'slide_2/top_left_corner_rainbow.png' %}" alt="Rainbow" class="bottom-right rainbow">
     <!-- Page Title -->
     <div class="page-title">
         <h1>LLM Insights</h1>
@@ -203,6 +224,11 @@
 
         <!-- Top Songs Section on the Right -->
         <div class="top-songs-section">
+            <div class="top-artist-section">
+                <div>
+                    <img src="{% static imagePath %}" class="cartoon-image">
+                </div>
+            </div>
             <!-- Left Column for Songs 1, 3, and 5 -->
             <div class="songs-column">
                 {% for line in content %}
