--- a/templates/contact.html
+++ b/templates/contact.html
@@ -227,9 +227,25 @@
     <div class="contactContainer">
         <!-- <img src="{% static 'slide_2/top_left_corner_rainbow.png' %}" alt="Rainbow" class="rainbow-corner bottom-right">
         <img src="{% static 'slide_2/top_left_corner_rainbow.png' %}" alt="Rainbow" class="rainbow-corner bottom-left"> -->
-        <h1> Contact </h1>
-
-        <p> Hello! Our project was made for Georgia Tech's CS 2340 class. We built this app using Django and the Spotify API. </p>
+        <h1>
+            {% if language == "english" %}
+                Contact
+            {% elif language == "hindi" %}
+                संपर्क
+            {% elif language == "mandarin" %}
+                联系我们
+            {% endif %}
+        </h1>
+        
+        <p>
+            {% if language == "english" %}
+                Hello! Our project was made for Georgia Tech's CS 2340 class. We built this app using Django and the Spotify API.
+            {% elif language == "hindi" %}
+                नमस्ते! हमारा प्रोजेक्ट जॉर्जिया टेक के CS 2340 क्लास के लिए बनाया गया था। हमने इस ऐप को Django और Spotify API का उपयोग करके बनाया है।
+            {% elif language == "mandarin" %}
+                您好！这是我们为佐治亚理工学院CS 2340课程制作的项目。我们使用Django和Spotify API构建了这个应用程序。
+            {% endif %}
+        </p>
 
     </div>
     {% endblock %}
