--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="button-wrapper">
-        <a href="{% url 'top_artist' %}" class="view-unwrapped">VIEW UNWRAPPED</a>
+        <a href="{% url 'transition_one' %}" class="view-unwrapped">VIEW UNWRAPPED</a>
     </div>
 </div>
 {% endblock %}
