fix rainbow on top artist and seasonal mood pages

--- a/templates/seasonalMood.html
+++ b/templates/seasonalMood.html
@@ -380,7 +380,7 @@
         <img src="{% static 'topArtist/triangle_button.png' %}" class="backward-triangle-button" alt="Forward Button">
     </a>
 
-    <img src="{% static 'topArtist/top_left_corner_rainbow.png' %}" class="bottom-corner-rainbow">
+    <img src="{% static 'topArtist/top_left_corner_rainbow.png' %}" class="bottom-corner-rainbow rainbow">
 
     {% endblock %}
 </body>
