--- a/templates/topArtistAndSongs.html
+++ b/templates/topArtistAndSongs.html
@@ -33,22 +33,22 @@
             overflow: hidden;
         }
 
-        .top-corner-rainbow {
-            width: 300px;
-            height: 300px;
-            position: absolute;
-            top: -50px;
-            left: -150px;
-        }
+        .top-left {
+           position: absolute;
+           top: -50px;
+           left: -150px;
+           width: 300px;
+           height: auto;
+       }
 
-        .bottom-corner-rainbow {
-            width: 300px;
-            height: 300px;
-            transform: rotate(180deg);
-            position: absolute;
-            bottom: -150px;
-            right: -150px;
-        }
+       .bottom-right {
+           position: absolute;
+           bottom: -150px;
+           right: -150px;
+           width: 300px;
+           height: auto;
+           transform: rotate(180deg);
+       }
 
         /* Combined Title Styling */
         .page-title {
@@ -281,7 +281,8 @@
         });
     </script>
 
-    <img src="{% static 'topArtist/top_left_corner_rainbow.png' %}" class="top-corner-rainbow">
+    <img src="{% static 'slide_2/top_left_corner_rainbow.png' %}" alt="Rainbow" class="top-left rainbow">
+    <img src="{% static 'slide_2/top_left_corner_rainbow.png' %}" alt="Rainbow" class="bottom-right rainbow">
 
     <!-- Page Title -->
     <div class="page-title">
@@ -388,7 +389,6 @@
 
     <img src="{% static 'topArtist/triangle_button.png' %}" class="backward-triangle-button" alt="Forward Button">
 
-    <img src="{% static 'topArtist/top_left_corner_rainbow.png' %}" class="bottom-corner-rainbow">
 
     <script>
         function toggleAudio(button) {
