hide hamburger menu on reset, register, login pages

--- a/templates/reset.html
+++ b/templates/reset.html
@@ -111,7 +111,7 @@
         </form>
 
         <div class="back-link">
-            <a href="{% url 'login' %}">Back to Login</a>
+            <a href="{% url 'login' %}">Go Back</a>
         </div>
     </div>
     {% endblock %}
