--- a/templates/base.html
+++ b/templates/base.html
@@ -287,11 +287,15 @@
 </head>
 <body>
     <div class="header">
-        <div class="menu-icon" onclick="toggleSidebar()">☰</div>
+        {% if hideMenu != False %}
+            <div class="menu-icon" onclick="toggleSidebar()">☰</div>
+        {% endif %}
+
         <div class="title">UNWRAPPED</div>
         <div class="dark-mode-div" id="dark-mode-btn">TOGGLE DARK MODE</div>
     </div>
 
+    {% if hideMenu != False %}
     <div class="sidebar" id="sidebar">
         <a href="{% url 'home' %}">Home</a>
         <a href="{% url 'top_artist' %}">Top Artists and Top Songs</a>
@@ -299,7 +303,9 @@
         <a href="{% url 'llm_insights_page' %}">LLM Insights</a>
         <a href="{% url 'contact' %}">Contact</a>
         <a href="{% url 'profile' %}">Profile</a>
+        <a href="{% url 'logout' %}">Logout</a>
     </div>
+    {% endif %}
 
 
     <script>
