--- a/templates/LLMinsights.html
+++ b/templates/LLMinsights.html
@@ -238,6 +238,24 @@
 
         </div>
     </div>
+
+    <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
+
+
+    <div class="circle-container">
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="small-circle"></div>
+        <div class="darker-small-circle"></div>
+    </div>
+
+    <a href="{% url 'ads_minutes' %}">
+        <img src="{% static 'topArtist/triangle_button.png' %}" class="backward-triangle-button" alt="Forward Button">
+    </a>
+
+
     {% endblock %}
 </body>
 </html>
