--- a/templates/ads_minutes.html
+++ b/templates/ads_minutes.html
@@ -141,6 +141,24 @@
           {% endif %}
         </div>
 
+        <a href="{% url 'llm_insights_page' %}">
+          <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
+        </a>
+
+
+        <div class="circle-container">
+            <div class="small-circle"></div>
+            <div class="small-circle"></div>
+            <div class="small-circle"></div>
+            <div class="small-circle"></div>
+            <div class="darker-small-circle"></div>
+            <div class="small-circle"></div>
+        </div>
+
+        <a href="{% url 'analyze_seasonal_mood' %}">
+            <img src="{% static 'topArtist/triangle_button.png' %}" class="backward-triangle-button" alt="Forward Button">
+        </a>
+
     {% endblock %}
 </body>
 </html>
