--- a/templates/base.html
+++ b/templates/base.html
@@ -264,6 +264,7 @@
             height: 8px;
             background-color: #d3d3d3;
             border-radius: 50%;
+            border: 1px solid black;
         }
 
         body.dark-mode .small-circle {
