--- a/templates/seasonalMood.html
+++ b/templates/seasonalMood.html
@@ -362,7 +362,9 @@
         <div class="small-record small-record6"></div>
     </div>
 
-    <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
+    <a href="{% url 'ads_minutes' %}">
+        <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
+    </a>
 
 
     <div class="circle-container">
@@ -370,8 +372,6 @@
         <div class="small-circle"></div>
         <div class="small-circle"></div>
         <div class="darker-small-circle"></div>
-        <div class="small-circle"></div>
-        <div class="small-circle"></div>
         <div class="small-circle"></div>
         <div class="small-circle"></div>
     </div>
