--- a/templates/register.html
+++ b/templates/register.html
@@ -179,10 +179,7 @@
         }
 
         .alert {
-            position: absolute;
-            top: 10px;
-            left: 50%;
-            transform: translateX(-50%);
+            margin-top: 100px;
             padding: 15px;
             border-radius: 6px;
             text-align: center;
