--- a/templates/halloween_graph.html
+++ b/templates/halloween_graph.html
@@ -143,7 +143,7 @@
                     {
                         label: artist2,
                         data: top3Artists[artist2],
-                        borderColor: "#DDC371",
+                        borderColor: "99dd71",
                         fill: false,
                     },
                     {
