--- a/templates/christmas_llm.html
+++ b/templates/christmas_llm.html
@@ -25,7 +25,7 @@
         body {
             font-family: 'Notable', sans-serif;
             background-image: url("{% static 'topArtist/background.png' %}");
-            background-color: orange;
+            background-color: red;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center top;
@@ -37,11 +37,11 @@
         .header {
             width: 100%;
             height: 100px;
-            background-color: black;
+            background-color: darkgreen;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            color: orange;
+            color: red;
             padding: 0 40px;
             position: fixed;
             top: 0;
@@ -57,7 +57,7 @@
         .title {
             font-size: 36px;
             font-weight: bold;
-            color: orange;
+            color: red;
             text-shadow:
                 -1px -1px 0 #C64036,
                 1px -1px 0 #C64036,
@@ -68,14 +68,14 @@
         }
 
         .profile {
-            color: #ECD101;
             font-size: 20px;
+
         }
 
         /* Combined Title Styling */
         .page-title {
             font-size: 24px;
-            color: black;
+            color: darkgreen;
             margin-bottom: 20px;
             text-align: center;
             margin-top: 10px;
@@ -84,7 +84,7 @@
         /* Layout for Artist and Songs Side by Side */
         .content-sections {
             display: flex;
-            justify-content: space-between; /* Artist on left, songs on right */
+            justify-content: space-between;
             width: 100%;
             max-width: 1200px;
             margin: 0 auto;
@@ -95,7 +95,7 @@
         .top-artist-section {
             display: flex;
             flex-direction: column;
-            align-items: flex-start; /* Align to the left */
+            align-items: flex-start;
             max-width: 300px;
         }
 
@@ -129,6 +129,7 @@
 
         /* Songs section styling */
         .top-songs-section {
+
             display: flex;
             flex-direction: column;
             gap: 15px;
@@ -142,11 +143,18 @@
             font-size: 20px;
         }
 
+        /* Updated styling for the content text */
+        .songs-column {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            font-size: 20px;
+        }
+
         .song {
-            /*display: flex;*/
             align-items: center;
             gap: 15px;
-            background-color: #FCF8F1;
+            background-color: darkgreen;
             padding: 20px 15px;
             width: 100%;
         }
@@ -177,14 +185,14 @@
 
         .song-details h3 {
             font-size: 25px;
-            color: #000000;
+            background-color: darkgreen;
             margin: 0;
         }
 
         .song-details p {
             font-family: 'Radio Canada', sans-serif;
             font-size: 16px;
-            color: #000000;
+            color: darkgreen;
             margin: 0;
         }
 
@@ -194,20 +202,20 @@
            left: -150px;
            width: 300px;
            height: auto;
-       }
+        }
 
-       .bottom-right {
+        .bottom-right {
            position: absolute;
            bottom: -150px;
            right: -150px;
            width: 300px;
            height: auto;
            transform: rotate(180deg);
-       }
+        }
     </style>
 
-    <img src="{% static 'slide_2/spider_web.png' %}" alt="Rainbow" class="top-left rainbow">
-    <img src="{% static 'slide_2/spider_web.png' %}" alt="Rainbow" class="bottom-right rainbow">
+    <img src="{% static 'slide_2/snowflake.png' %}" alt="Rainbow" class="top-left rainbow">
+    <img src="{% static 'slide_2/snowflake.png' %}" alt="Rainbow" class="bottom-right rainbow">
     <!-- Page Title -->
     <div class="page-title">
         <h1>LLM Insights</h1>
@@ -233,10 +241,9 @@
             <!-- Left Column for Songs 1, 3, and 5 -->
             <div class="songs-column">
                 {% for line in content %}
-                    <p> {{ line }} </p>
+                    <p>{{ line }}</p>
                 {% endfor %}
             </div>
-
         </div>
     </div>
     {% endblock %}
