--- a/templates/christmas_seasonal.html
+++ b/templates/christmas_seasonal.html
@@ -21,7 +21,7 @@
 
         body {
             font-family: 'Notable', sans-serif;
-            background-color: orange;
+            background-color: red;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center top 100px;
@@ -99,7 +99,7 @@
 
         .small-record-mood {
             font-family: 'Notable', sans-serif;
-            color: #000000;
+            color: darkgreen;
             font-size: 24px;
             width: 150px;
             /*margin-right: 30px;*/
@@ -114,7 +114,7 @@
 
         .small-record-artist {
             font-family: 'Radio Canada', sans-serif;
-            color: #000000;
+            color: darkgreen;
             font-size: 16px;
             width: 150px;
             /*margin-right: 30px;*/
@@ -380,7 +380,7 @@
         <img src="{% static 'topArtist/triangle_button.png' %}" class="backward-triangle-button" alt="Forward Button">
     </a>
 
-    <img src="{% static 'topArtist/spider_web.png' %}" class="bottom-corner-rainbow rainbow">
+    <img src="{% static 'topArtist/snowflake.png' %}" class="bottom-corner-rainbow rainbow">
 
     {% endblock %}
 </body>
